--- a/css/work.css
+++ b/css/work.css
@@ -66,7 +66,7 @@
   display: flex;
   flex-direction: row-reverse;
   gap: 14rem;
-  margin-bottom: 20rem;
+  margin-bottom: 16rem;
 }
 
 .news_title {
@@ -106,6 +106,10 @@
   margin-right: 0.5rem;
   font-size: 1.6rem;
   border-right: 0.1rem solid #000000;
+}
+
+.news_wrapper {
+  margin-top: 11rem;
 }
 
 /* ┌─────────────────────────────────────────┐
@@ -197,33 +201,107 @@
   color: white;
 }
 
-/* @media screen and (max-width: 375px) {
-   */
+@media screen and (max-width: 375px) {
+  /* タイトルとニュースの親コンテナ flexbox */
+  .news_area {
+    padding-right: 2rem;
 
-/* --- レイアウト確認用（完成したら消す） --- */
-div,
-section,
-article,
-header,
-footer,
-nav,
-main {
-  outline: 1px solid red !important;
-}
-img,
-svg {
-  outline: 1px solid blue !important;
-  background-color: rgba(0, 0, 255, 0.1);
-}
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-span,
-a,
-li {
-  outline: 1px solid limegreen !important;
+    gap: 4rem;
+    margin-bottom: 17rem;
+    margin-top: 0rem;
+  }
+
+  .news_title {
+    writing-mode: vertical-rl;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    margin-top: 8rem;
+  }
+
+  .news_en {
+    font-size: 2.8rem;
+    color: #666666;
+    background-color: gray;
+  }
+
+  .news_jp {
+    font-size: 3.6rem;
+  }
+
+  /* ┌─────────────────────────────────────────┐
+     │ 新しい価値の創造・科学と技術の調和                       │
+     └─────────────────────────────────────────┘ */
+
+  #products1 {
+    margin-bottom: 17rem;
+  }
+
+  /* タイトルと画像の親コンテナ flexbox */
+  .concept_container1 {
+    margin-left: auto;
+    width: 95%;
+
+    display: flex;
+
+    padding-right: 2rem;
+
+    flex-direction: row-reverse;
+  }
+
+  /* タイトルと画像の親コンテナ flexbox */
+  .concept_container2 {
+    margin-right: auto;
+    width: 95%;
+
+    padding-left: 2rem;
+  }
+
+  /* └ 画像とcardのコンテナ */
+  .concept_card {
+    margin-top: 7rem;
+  }
+
+  .concept_text1 {
+    width: 65%;
+    height: 9rem;
+    position: absolute;
+    bottom: 2rem;
+    left: 2rem;
+
+    background-color: #f9e90699;
+    text-align: center;
+
+    font-size: 1.6rem;
+    color: white;
+  }
+
+  /* --- レイアウト確認用（完成したら消す） --- */
+  div,
+  section,
+  article,
+  header,
+  footer,
+  nav,
+  main {
+    outline: 1px solid red !important;
+  }
+  img,
+  svg {
+    outline: 1px solid blue !important;
+    background-color: rgba(0, 0, 255, 0.1);
+  }
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  span,
+  a,
+  li {
+    outline: 1px solid limegreen !important;
+  }
 }
